compiler/fir/analysis-tests/testData/resolve/extraCheckers/kt72537.kt
// RUN_PIPELINE_TILL: FRONTEND
fun main() {
    val x = <!UNRESOLVED_REFERENCE!>++<!>++<!SYNTAX!><!>
}

/* GENERATED_FIR_TAGS: assignment, functionDeclaration, incrementDecrementExpression, localProperty, propertyDeclaration */
